# ais-dev2il-smoothie-shop

./: 05_METRICS.md  06_TRACING.md  README.md  docker-compose.yml  kitchen_service.py  logging_config.yaml  order_service.py  pyproject.toml
